@@ -44,3 +44,10 @@ If you want to help testing, please use the trunk version from the Collective::
     urls = 
         http://svn.plone.org/svn/collective/Products.TinyMCE/trunk Products.TinyMCE
     as_eggs = true
+
+Plone 3
+-------
+
+To use TinyMCE in Plone3, make as below. Next go to tinymce control panel and add
+'tinymce-plone3.css' in 'Choose the Css used in Wysiwyg Editor Area'.
+
